automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
     "class Singer(Musician):\n",
     "    \n",
     "    def __init__(self, name):\n",
-    "        super().__init(name)  # Notice how we pass in name argument from init to the super().__init() method, because it expects it\n",
+    "        super().__init__(name)  # Notice how we pass in name argument from init to the super().__init() method, because it expects it\n",
     "        self.role = \"Singer\"\n",
     "        \n",
     "    def tune_instrument(self):\n",
